--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   dropdown_search: ^5.0.5
   mask_text_input_formatter: ^2.0.0
   url_launcher: ^6.1.11
-
+  excel: ^4.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
